--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           CHECKS_URL="https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/checks"
           CHECKS_JSON=$(curl --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" $CHECKS_URL)
+          echo "JSON response: $CHECKS_JSON"
           CHECK_NAMES=$(echo $CHECKS_JSON | jq -r '.check_runs[].name')
           echo "Check names: $CHECK_NAMES"
 
