--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Log check names
         run: |
-          CHECKS_URL="https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/checks"
-          CHECKS_JSON=$(curl --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" $CHECKS_URL)
+          CHECKS_URL="https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.pull_request.head.sha }}/check-runs"
+          CHECKS_JSON=$(curl --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" --header "Accept: application/vnd.github.v3+json" $CHECKS_URL)
           echo "JSON response: $CHECKS_JSON"
           CHECK_NAMES=$(echo $CHECKS_JSON | jq -r '.check_runs[].name')
           echo "Check names: $CHECK_NAMES"
