--- a/.github/workflows/merge-release.yml
+++ b/.github/workflows/merge-release.yml
@@ -14,22 +14,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Log check names
+      - name: Log deployments
         run: |
-          CHECKS_URL="https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.pull_request.head.sha }}/check-runs"
-          CHECKS_JSON=$(curl --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" --header "Accept: application/vnd.github.v3+json" $CHECKS_URL)
-          CHECK_NAMES=$(echo $CHECKS_JSON | jq -r '.check_runs[].name')
-          echo "Check names: $CHECK_NAMES"
+          DEPLOYMENTS_URL="https://api.github.com/repos/${{ github.repository }}/deployments"
+          DEPLOYMENTS_JSON=$(curl --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" --header "Accept: application/vnd.github.v3+json" $DEPLOYMENTS_URL)
+          echo "Deployments JSON: $DEPLOYMENTS_JSON"
+          DEPLOYMENT_IDS=$(echo $DEPLOYMENTS_JSON | jq -r '.[].id')
+          echo "Deployment IDs: $DEPLOYMENT_IDS"
 
-      - name: Wait for Vercel
-        id: wait-vercel
-        uses: fountainhead/action-wait-for-check@v1.0.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ github.event.pull_request.head.sha }}
-          checkName: 'Vercel'
-          timeoutSeconds: 600
-          intervalSeconds: 10
+      - name: Wait for Vercel deployment
+        run: |
+          VERCEL_DEPLOYMENT_URL="https://api.vercel.com/v5/now/deployments/${{ steps.log-deployments.outputs.deployment_id }}"
+          while true; do
+            DEPLOYMENT_STATE=$(curl --header "Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}" $VERCEL_DEPLOYMENT_URL | jq -r '.state')
+            if [ "$DEPLOYMENT_STATE" == "READY" ]; then
+              break
+            fi
+            echo "Waiting for deployment to be ready..."
+            sleep 10
+          done
 
       - name: Merge PR
         if: steps.wait-vercel.outputs.conclusion == 'success'
