feat: release script

--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "release": "node ./scripts/release.js"
   },
   "dependencies": {
+    "@octokit/rest": "^20.1.0",
+    "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.2"
+    "react-dom": "^18"
   }
 }
