--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -15,14 +15,13 @@ jobs:
       - name: Get the version
         id: get_version
         run: |
-            echo "GITHUB_HEAD_REF: ${GITHUB_HEAD_REF}"
-            if [[ "${GITHUB_HEAD_REF}" =~ ^refs/heads/release/ ]]; then
-            VERSION=${GITHUB_HEAD_REF#refs/heads/release/}
+          echo "GITHUB_HEAD_REF: ${GITHUB_HEAD_REF}"
+          if [[ "${GITHUB_HEAD_REF}" =~ ^release/ ]]; then
+            VERSION=${GITHUB_HEAD_REF#release/}
             echo "::set-output name=VERSION::${VERSION}"
-            else
+          else
             echo "::set-output name=VERSION::unknown"
-            fi
-
+          fi
 
       - name: Check version
         run: |
