--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,13 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set version
+        id: version
+        run: echo "::set-output name=version::${GITHUB_HEAD_REF#release/}"
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.head_ref }}
-          release_name: Release ${{ github.head_ref }}
+          tag_name: v${{ steps.version.outputs.version }}
+          release_name: Release ${{ steps.version.outputs.version }}
           draft: false
           prerelease: false
